--- a/LibreriaCamiloWeb/LibreriaCamiloWeb.csproj
+++ b/LibreriaCamiloWeb/LibreriaCamiloWeb.csproj
@@ -72,6 +72,8 @@
     <Reference Include="System.EnterpriseServices" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Base.Master" />
+    <Content Include="WebHtml.jpg" />
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -89,13 +91,35 @@
     <Content Include="App_Data\LibreriaCamiloDb_log.ldf">
       <DependentUpon>LibreriaCamiloDb.mdf</DependentUpon>
     </Content>
+    <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Scripts\bootstrap.min.js" />
+    <Content Include="Content\bootstrapTheme.min.css" />
+    <Content Include="Scripts\jquery-3.2.1.slim.min.js" />
     <Content Include="DataBase\Script.sql" />
+    <Content Include="Default.aspx" />
+    <Content Include="favicon.ico" />
     <Content Include="Global.asax" />
     <Content Include="UI\Consultas\cUsuarios.aspx" />
+    <Content Include="UI\Consultas\WebHtml.jpg" />
     <Content Include="UI\Registros\rUsuarios.aspx" />
+    <Content Include="UI\Registros\WebHtml.jpg" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Base.Master.cs">
+      <DependentUpon>Base.Master</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Base.Master.designer.cs">
+      <DependentUpon>Base.Master</DependentUpon>
+    </Compile>
+    <Compile Include="Default.aspx.cs">
+      <DependentUpon>Default.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Default.aspx.designer.cs">
+      <DependentUpon>Default.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -122,6 +146,7 @@
     <Compile Include="Utilidades.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="Content\Img\" />
     <Folder Include="Models\" />
     <Folder Include="UI\Reportes\" />
   </ItemGroup>
