--- a/LibreriaCamiloWeb/LibreriaCamiloWeb.csproj
+++ b/LibreriaCamiloWeb/LibreriaCamiloWeb.csproj
@@ -73,7 +73,18 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Base.Master" />
+    <Content Include="Login.aspx" />
+    <Content Include="UI\Consultas\cClientes.aspx" />
+    <Content Include="UI\Consultas\cProductos.aspx" />
+    <Content Include="UI\Consultas\cUsuarios.aspx" />
+    <Content Include="UI\Consultas\WebHtml.jpg" />
+    <Content Include="UI\Registros\rClientes.aspx" />
+    <Content Include="UI\Registros\rFacturas.aspx" />
+    <Content Include="UI\Registros\rProductos.aspx" />
+    <Content Include="UI\Registros\rUsuarios.aspx" />
+    <Content Include="UI\Registros\WebHtml.jpg" />
     <Content Include="WebHtml.jpg" />
+    <Content Include="WebHtmla.jpg" />
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -99,10 +110,6 @@
     <Content Include="Default.aspx" />
     <Content Include="favicon.ico" />
     <Content Include="Global.asax" />
-    <Content Include="UI\Consultas\cUsuarios.aspx" />
-    <Content Include="UI\Consultas\WebHtml.jpg" />
-    <Content Include="UI\Registros\rUsuarios.aspx" />
-    <Content Include="UI\Registros\WebHtml.jpg" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
@@ -123,11 +130,32 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Login.aspx.cs">
+      <DependentUpon>Login.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Login.aspx.designer.cs">
+      <DependentUpon>Login.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Settings.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
       <DependentUpon>Settings.settings</DependentUpon>
+    </Compile>
+    <Compile Include="UI\Consultas\cClientes.aspx.cs">
+      <DependentUpon>cClientes.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="UI\Consultas\cClientes.aspx.designer.cs">
+      <DependentUpon>cClientes.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="UI\Consultas\cProductos.aspx.cs">
+      <DependentUpon>cProductos.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="UI\Consultas\cProductos.aspx.designer.cs">
+      <DependentUpon>cProductos.aspx</DependentUpon>
     </Compile>
     <Compile Include="UI\Consultas\cUsuarios.aspx.cs">
       <DependentUpon>cUsuarios.aspx</DependentUpon>
@@ -135,6 +163,27 @@
     </Compile>
     <Compile Include="UI\Consultas\cUsuarios.aspx.designer.cs">
       <DependentUpon>cUsuarios.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="UI\Registros\rClientes.aspx.cs">
+      <DependentUpon>rClientes.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="UI\Registros\rClientes.aspx.designer.cs">
+      <DependentUpon>rClientes.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="UI\Registros\rFacturas.aspx.cs">
+      <DependentUpon>rFacturas.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="UI\Registros\rFacturas.aspx.designer.cs">
+      <DependentUpon>rFacturas.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="UI\Registros\rProductos.aspx.cs">
+      <DependentUpon>rProductos.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="UI\Registros\rProductos.aspx.designer.cs">
+      <DependentUpon>rProductos.aspx</DependentUpon>
     </Compile>
     <Compile Include="UI\Registros\rUsuarios.aspx.cs">
       <DependentUpon>rUsuarios.aspx</DependentUpon>
