--- a/LibreriaCamiloWeb/Web.config
+++ b/LibreriaCamiloWeb/Web.config
@@ -13,6 +13,13 @@
       providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.web>
+    <authentication mode="Forms">
+      <forms loginUrl="/Login.aspx" timeout="2880" defaultUrl="/Default.aspx" />
+    </authentication>
+    
+    <authorization>
+      <deny users="?"/>
+    </authorization>
     <compilation debug="true" targetFramework="4.6.1" />
     <httpRuntime targetFramework="4.6.1" />
   </system.web>
