--- a/BLL/BLL.csproj
+++ b/BLL/BLL.csproj
@@ -48,6 +48,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ClientesBLL.cs" />
+    <Compile Include="ProductosBLL.cs" />
     <Compile Include="Properties\Settings.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
