Por Lo Menos Pasamos en C

--- a/BLL/BLL.csproj
+++ b/BLL/BLL.csproj
@@ -76,6 +76,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ClientesBLL.cs" />
+    <Compile Include="FacturasProductosBLL.cs" />
+    <Compile Include="FacturasBLL.cs" />
     <Compile Include="ProductosBLL.cs" />
     <Compile Include="Properties\Settings.Designer.cs">
       <AutoGen>True</AutoGen>
