--- a/LibreriaCamiloWeb/LibreriaCamiloWeb.csproj
+++ b/LibreriaCamiloWeb/LibreriaCamiloWeb.csproj
@@ -98,7 +98,11 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Base.Master" />
+    <Content Include="Content\toastr.min.css" />
     <Content Include="Login.aspx" />
+    <Content Include="Scripts\jquery-2.2.0.min.js" />
+    <Content Include="Scripts\popper.min.js" />
+    <Content Include="Scripts\toastr.min.js" />
     <Content Include="SqlServerTypes\readme.htm" />
     <Content Include="SqlServerTypes\x64\msvcr120.dll">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
@@ -113,6 +117,7 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="UI\Consultas\cClientes.aspx" />
+    <Content Include="UI\Consultas\cFacturas.aspx" />
     <Content Include="UI\Consultas\cProductos.aspx" />
     <Content Include="UI\Consultas\cUsuarios.aspx" />
     <Content Include="UI\Consultas\WebHtml.jpg" />
@@ -207,6 +212,13 @@
     </Compile>
     <Compile Include="UI\Consultas\cClientes.aspx.designer.cs">
       <DependentUpon>cClientes.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="UI\Consultas\cFacturas.aspx.cs">
+      <DependentUpon>cFacturas.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="UI\Consultas\cFacturas.aspx.designer.cs">
+      <DependentUpon>cFacturas.aspx</DependentUpon>
     </Compile>
     <Compile Include="UI\Consultas\cProductos.aspx.cs">
       <DependentUpon>cProductos.aspx</DependentUpon>
